--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "scripts": {
         "postinstall": "npm install --prefix frontend && npm install --prefix backend",
         "build": "npm run build --prefix frontend"
+    },
+    "dependencies": {
+        "serverless-http": "^4.0.0"
     }
 }
