--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
         "build": "npm run build --prefix frontend"
     },
     "dependencies": {
+        "bcryptjs": "^3.0.3",
+        "cors": "^2.8.6",
+        "dotenv": "^17.3.1",
+        "express": "^5.2.1",
+        "jsonwebtoken": "^9.0.3",
+        "pg": "^8.18.0",
         "serverless-http": "^4.0.0"
     }
 }
